# Bizzi_Project

./: AGENT_REGISTRY.md  APPLICATION_SERVICES_MILESTONE.md  CAPABILITY_MAP_v1.0.md  CLAUDE.md  CONNECTOR_TEST.md  CORE_Architecture_Traceability_Matrix.md  CORE_Canonical_Data_Model.md  CORE_Configuration_Management_Framework.md  CORE_Decision_Framework.md  CORE_Enterprise_Domain_Model.md  CORE_Enterprise_Event_Model.md  CORE_Enterprise_Metadata_Standard.md  CORE_Enterprise_Object_Model.md  CORE_Enterprise_Taxonomy.md  CORE_Integration_API_Framework.md  CORE_Object_Registry.md  CORE_Simplicity_and_Usability_Principles.md  CORE_Versioning_Framework.md  CORE_Workflow_State_Machine_Framework.md  Capability_Map.md  ENTERPRISE_FUNCTION_REGISTRY.md  GOVERNANCE_MODEL.md  Governance_Model.md  MASTER_INDEX_FULL.md  PB001_Grant_Acquisition.md  PB002_Budget_Approval.md  PB003_Customer_Onboarding.md  PB004_Lead_to_Contract.md  PB005_Renewal_Retention.md  PB006_Upsell_Cross_Sell.md  PB007_Support_Escalation.md  PB008_Monthly_Financial_Close.md  PB009_Vendor_Onboarding.md  PB010_Procurement_Request_to_Pay.md  PB011_Employee_Onboarding.md  PB012_Recruitment_Cycle.md  PB013_Contract_Review_Approval.md  PB014_Compliance_Monitoring.md  PB015_Risk_Identification_Treatment.md  PB016_Cyber_Incident_Response.md  (+93 more)
00_ARCHITECTURE/: ARCHITECTURE_SPECIFICATION.md
00_CONSTITUTION/: AI-01_AUTHORITATIVE_INTERPRETATION.md
00_RELEASE/: ARCHITECTURE_SCOPE_v1.0.md  ARTIFACT_REGISTRY_v1.0.md  ART_OF_BUSINESS_v1.0_SPECIFICATION.md  CANONICAL_INDEX_v1.0.md  CANONICAL_RELEASE_v1.0.md  CHANGE_CONTROL_v1.0.md  GOVERNANCE_BASELINE_v1.0.md  IMPLEMENTATION_READINESS_ASSESSMENT_v1.0.md  LAYER_REGISTRY_v1.0.md  RELEASE_CERTIFICATE_v1.0.md  RELEASE_NOTES_v1.0.md  RISK_BASELINE_v1.0.md  ROADMAP_AFTER_v1.0.md  TRACEABILITY_MATRIX_v1.0.md
00_VISION/: .gitkeep
01_GOVERNANCE/: .gitkeep  AUTHORITY_MATRIX.md  DECISION_ROUTING_MODEL.md  EGC-01_ENGINEERING_GOVERNANCE_CHARTER.md  ESCALATION_MATRIX.md  GOVERNANCE_MODEL.md  RACI_MATRIX.md
02_CAPABILITY_MAP/: .gitkeep  CAPABILITY_MAP.md
03_FUNCTION_REGISTRY/: .gitkeep  ENTERPRISE_FUNCTION_REGISTRY.md
04_AGENT_LIBRARY/: .gitkeep  AG001_CEO.md  AG002_Chief_Orchestrator.md  AG003_AI_Auditor.md  AG004_Business_Analyst.md  AG005_Risk_Manager.md  AG012_Finance_Manager.md  AG013_Tax_Manager.md  AG014_Funding_Manager.md  AG015_Legal_Manager.md  AG016_Compliance_Manager.md  AG021_Sales_Manager.md  AG053_Data_Manager.md  (+10 more)
backend/: .dockerignore  .env.example  .env.prod.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e0aa881262f5_baseline.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/tests/: conftest.py
(+385 files in other folders)
