[project]
name = "bizzi-backend"
version = "0.1.0"
description = "Bizzi Platform MVP backend — Workspace Execution Loop v0.1 (ADR-0007: Python + FastAPI)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.139.2",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[tool.uv]
package = false

