[project]
name = "bizzi-backend"
version = "0.1.0"
description = "Bizzi Platform MVP backend — Workspace Execution Loop v0.1 (ADR-0007: Python + FastAPI)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.139.2",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "uvicorn[standard]==0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

